# The

./: Cargo.toml  graph.ron
scenes/: main_scene.ron
studio/: Cargo.toml  README.md
studio/editor/: Cargo.toml  INTEGRATION.md  README.md
studio/editor/assets/shaders/: grid.wgsl
studio/editor/src/: export.rs  lib.rs  main.rs  persist.rs  registry.rs  state.rs
studio/editor/src/graph/: conversion.rs  mod.rs  resource.rs  types.rs
studio/editor/src/interpreter/: bevy_bridge.rs  error.rs  exec.rs  gold.rs  mod.rs  resources.rs  runtime.rs  subgraph.rs  value.rs
studio/editor/src/interpreter/context/: eval_bool.rs  eval_entity.rs  eval_float.rs  eval_int.rs  eval_string.rs  eval_vec2.rs  mod.rs
studio/editor/src/interpreter/systems/: actors.rs  lifecycle.rs  mod.rs  tick.rs
studio/editor/src/nodes/: collections.rs  control.rs  descriptor.rs  ecs.rs  events.rs  helpers.rs  input.rs  loops.rs  math.rs  mod.rs  string.rs  variables.rs  vec2.rs
studio/editor/src/nodes/game/: entity.rs  gold.rs  mod.rs  transform.rs
studio/editor/src/scene/: mod.rs  persist.rs  tree.rs  types.rs
studio/editor/src/ui/: components.rs  mod.rs  node_icons.rs  param_fields.rs  scroll.rs
studio/editor/src/ui/canvas/: coords.rs  grid.rs  mod.rs  render.rs
studio/editor/src/ui/canvas/interaction/: canvas.rs  cursor.rs  mod.rs  node_drag.rs  pin_snap.rs  port.rs  selection.rs  view.rs  wire_connect.rs
studio/editor/src/ui/hierarchy/: mod.rs
studio/editor/src/ui/inspector/: mod.rs
studio/editor/src/ui/nodes/: headers.rs  mod.rs  palette.rs  pins.rs  shell.rs  standard.rs  theme.rs
studio/editor/src/ui/nodes/styled/: branch.rs  delay.rs  event.rs  input.rs  mod.rs  print_log.rs  variables.rs
studio/editor/src/ui/shell/: graph_edit.rs  mod.rs  pie.rs  save_load.rs  spawn.rs  sync.rs  tabs.rs  toolbar.rs
studio/editor/src/ui/viewport/: mod.rs
studio/editor_play/: Cargo.toml
studio/editor_play/src/: main.rs
studio/src/: lib.rs
studio/visual_blueprint/: Cargo.toml  README.md
studio/visual_blueprint/examples/: branch_demo.rs  treasury_demo.rs
studio/visual_blueprint/src/: ast.rs  export.rs  lib.rs  pins.rs  validate.rs
studio/visual_blueprint/src/components/: gold.rs  mod.rs
studio/visual_blueprint/src/interpreter/: demo.rs  flow.rs  mod.rs
studio/visual_blueprint/src/nodes/: constructors.rs  mod.rs  pins.rs
studio/visual_blueprint_macros/: Cargo.toml
studio/visual_blueprint_macros/src/: lib.rs
studio/visual_blueprint_macros/src/codegen/: emit.rs  mod.rs  resolve.rs
studio/vm/: Cargo.toml  README.md
studio/vm/src/: compile.rs  graph.rs  lib.rs  runtime.rs
